Fix ugly horizontal scrolling on mobile details page

--- a/css/app.css
+++ b/css/app.css
@@ -147,7 +147,8 @@
 .graphiql-container .docExplorerWrap.hide {
   opacity: 0;
   position: absolute;
-  left: 350px;
+  left: 0;
+  z-index: -1;
 }
 
 .graphiql-container .historyPaneWrap {
